Fri Sep 21 12:16:18 2001  George Lebl <jirka@5z.com>

	* applet.c, button-widget.c, foobar-widget.c, global-keys.c
	  gnome-run.c, launcher.[ch], main.c, menu.c, panel-util.c,
	  panel.c, session.c, swallow.c:  Make the beast compile.  Fix
	  uses of panel_error_dialog, fix usage of GnomeDesktopItem,
	  fix typos, fix includes, smoke some crack, and get rid of remaining
	  uses of panel_file_exists

Fri Sep 21 01:40:50 2001  George Lebl <jirka@5z.com>

	* *.[ch]: use GType for types

	* extern.c, gnome-run.c, launcher.[ch]: do more ditem porting

Thu Sep 20 15:17:33 2001  George Lebl <jirka@5z.com>

	* launcher.c, swallow.c: Do some DesktopItem porting, remove some
	  FIXMEs

	* *.[ch], panel-util.[ch]: whack panel_file_exists and
	  panel_is_program_in_path, since those are now nice and working
	  in the libs.

2001-09-10  Frank Belew  <frb@ximian.com>
	* panel/launcher.c: changed references to removed functions to use
		gnome_desktop_item_get_string instead

Fri Sep 07 14:09:51 2001  George Lebl <jirka@5z.com>

	* *.c: include libgnome/libgnome.h and libgnomeui/libgnomeui.h

Tue Sep 04 23:07:54 2001  George Lebl <jirka@5z.com>

	* Makefile.am, basep-widget.[ch], conditional.c, foobar-widget.c,
	  gnome-run.c, main.c, menu.c, panel-util.c, panel-widget.c,
	  panel_config.c, session.c, tasklist_icon.c:  Reenable some things
	  and ifdef out others.  Put gnome-run back.  Compiles with latest
	  libgnome/ui now.

2001-08-31  Kevin Vandersloot <kfv101@psu.edu>

	* panel_widget.c (panel_widget_get_free_space): fix 
	initializing of right, left ints. They were switched. This
	fixes the case where the tasklist wouldn't honor the
	"Only use empty space" option.

2001-09-01  Darin Adler  <darin@bentspoon.com>

	* conditional.c:
	* drawer.c:
	* main.c:
	* menu.c:
	* panel_config.c:
	* session.c:
	* session.h:
	Fix includes to start on the porting to GNOME 2.

2001-08-26  Seth Nickell  <snickell@stanford.edu>

	* foobar-widget.c:
