@@ -426,6 +426,7 @@ gsm/default.session.5
 gsm/gnome-session.1
 idl/Makefile
 panel/Makefile
+panel/libpanelapplet-2.0.pc
 po/Makefile.in
 smproxy/Makefile
 ])
