@@ -1,3 +1,9 @@
+2001-09-24  Glynn Foster <glynn.foster@sun.com>
+
+	* configure.in, Makefile.am, libpanelapplet-2.0.pc.in:
+	  Add libpanelapplet-2.0 pkg-config file. It probably
+	  isn't 100% correct yet.
+
 Fri Sep 21 12:16:18 2001  George Lebl <jirka@5z.com>
 
 	* applet.c, button-widget.c, foobar-widget.c, global-keys.c
